--- a/App/src/app/shared/models/admin-request-active/admin-request-active.component.html
+++ b/App/src/app/shared/models/admin-request-active/admin-request-active.component.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
     <ion-back-button slot="start" defaultHref=""  (click)="goBack()"></ion-back-button>
-    <ion-title>Active</ion-title>
+    <ion-title>{{"active" | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -11,7 +11,7 @@
         <ion-item slot="header" color="light">
           <i class="fa-solid fa-file-lines"></i>
           
-          <ion-label class="ion-padding-horizontal">Request Details</ion-label>
+          <ion-label class="ion-padding-horizontal">{{"requestDetails" | translate}}</ion-label>
         </ion-item>
         <div class="ion-padding" slot="content">
           <ion-card>
@@ -19,81 +19,81 @@
               <ion-grid>
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">Name</ion-label>
+                    <ion-label class="head">{{"Name" | translate}}</ion-label>
                     <ion-label>: {{data?.name}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">Gender</ion-label>
+                    <ion-label class="head">{{"gender" | translate}}</ion-label>
                     <ion-label>: {{data?.gender}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">Age</ion-label>
+                    <ion-label class="head">{{"age" | translate}}</ion-label>
                     <ion-label>: {{data?.age}}</ion-label>
                   </ion-col>
                 </ion-row>
                 
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">Blood Group</ion-label>
+                    <ion-label class="head">{{"bloodGroup" | translate}}</ion-label>
                     <ion-label>: {{data?.bloodGroup}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">Blood Require Date</ion-label>
+                    <ion-label class="head">{{"RequireDate" | translate}}</ion-label>
                     <ion-label>: {{data?.bloodRequireDate}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">State</ion-label>
+                    <ion-label class="head">{{"state" | translate}}</ion-label>
                     <ion-label>: {{data?.state}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row *ngIf="data?.district">
                   <ion-col size="12">
-                    <ion-label class="head">District</ion-label>
+                    <ion-label class="head">{{"District" | translate}}</ion-label>
                     <ion-label>: {{data?.district}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row *ngIf="data?.tahsil">
                   <ion-col size="12">
-                    <ion-label class="head">Tehsil</ion-label>
+                    <ion-label class="head">{{"Tahsil" | translate}}</ion-label>
                     <ion-label>: {{data?.tahsil}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row *ngIf="data?.village">
                   <ion-col size="12">
-                    <ion-label class="head">Village</ion-label>
+                    <ion-label class="head">{{"Village" | translate}}</ion-label>
                     <ion-label>: {{data?.village}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row *ngIf="data.gender =='FEMALE'">
                   <ion-col size="12">
-                    <ion-label class="head">Father/Husband</ion-label>
+                    <ion-label class="head">{{"Father/Husband" | translate}}</ion-label>
                     <ion-label>: {{data?.fatherOrHusband}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">Hemoglobin</ion-label>
+                    <ion-label class="head">{{"hemoglobin" | translate}}</ion-label>
                     <ion-label>: {{data?.hemoglobin}}</ion-label>
                   </ion-col>
                 </ion-row>
                
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">Mobile Number</ion-label>
+                    <ion-label class="head">{{"mobileNo" | translate}}</ion-label>
                     <ion-label>: {{data?.mobileNo}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">Units</ion-label>
+                    <ion-label class="head">{{"units" | translate}}</ion-label>
                     <ion-label>: {{data?.units}}</ion-label>
                   </ion-col>
                 </ion-row>
@@ -107,7 +107,7 @@
                       *ngIf="!data?.illness"
                       name="close"
                     ></ion-icon>
-                    <ion-label class="head donor-illness">Illness</ion-label>
+                    <ion-label class="head donor-illness">{{"illness" | translate}}</ion-label>
                   </ion-col>
                 </ion-row>
               </ion-grid>
@@ -119,7 +119,7 @@
       <ion-accordion value="second" *ngIf="!!data?.acceptor">
         <ion-item slot="header" color="light">
           <i class="fa-solid fa-user"></i>
-          <ion-label class="ion-padding-horizontal">Acceptor Details</ion-label>
+          <ion-label class="ion-padding-horizontal">{{"acceptorDetails" | translate}}</ion-label>
         </ion-item>
         <div class="ion-padding" slot="content">
           <ion-card>
@@ -127,7 +127,7 @@
               <ion-grid>
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head"> Name</ion-label>
+                    <ion-label class="head"> {{"Name" | translate}}</ion-label>
                     <ion-label>
                       : {{data?.acceptor?.firstName}}
                       {{data?.acceptor?.lastName}}</ion-label
@@ -135,22 +135,22 @@
                   </ion-col>
 
                   <ion-col size="12" *ngIf="!!data?.acceptor?.email">
-                    <ion-label class="head">Email</ion-label>
+                    <ion-label class="head">{{"email" | translate}}</ion-label>
                     <ion-label> : {{data?.acceptor?.email}}</ion-label>
                   </ion-col>
 
                   <ion-col size="12" *ngIf="!!data?.acceptor?.state">
-                    <ion-label class="head">State</ion-label>
+                    <ion-label class="head">{{"state" | translate}}</ion-label>
                     <ion-label> : {{data?.acceptor?.state}}</ion-label>
                   </ion-col>
 
                   <ion-col size="12" *ngIf="!!data?.acceptor?.district">
-                    <ion-label class="head">District</ion-label>
+                    <ion-label class="head">{{"District" | translate}}</ion-label>
                     <ion-label> : {{data?.acceptor?.district}}</ion-label>
                   </ion-col>
 
                   <ion-col size="12">
-                    <ion-label class="head">Mobile No</ion-label>
+                    <ion-label class="head">{{"mobileNo" | translate}}</ion-label>
                     <ion-label> : {{data?.acceptor?.mobileNo}}</ion-label>
                   </ion-col>
                 </ion-row>
@@ -163,7 +163,7 @@
         <ion-item slot="header" color="light">
           <i class="fa-solid fa-building-columns"></i>
           <ion-label class="ion-padding-horizontal"
-            >Blood Bank Details</ion-label
+            >{{"bloodBankDetails" | translate}}</ion-label
           >
         </ion-item>
         <div class="ion-padding accordion-collapsed" slot="content">
@@ -172,19 +172,19 @@
               <ion-grid>
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">Blood Bank Name </ion-label>
+                    <ion-label class="head">{{"bloodBankName" | translate}} </ion-label>
                     <ion-label> : {{data?.bloodBankName}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">State </ion-label>
+                    <ion-label class="head">{{"state" | translate}} </ion-label>
                     <ion-label> : {{data?.bankState}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">City </ion-label>
+                    <ion-label class="head">{{"city" | translate}} </ion-label>
                     <ion-label> : {{data?.bankCity}}</ion-label>
                   </ion-col>
                 </ion-row>
@@ -198,7 +198,7 @@
         <ion-item slot="header" color="light">
           
           <i class="fa-solid fa-droplet"></i>
-          <ion-label class="ion-padding-horizontal">Donor Details</ion-label>
+          <ion-label class="ion-padding-horizontal">{{"donorDetails" | translate}}</ion-label>
         </ion-item>
         <div class="ion-padding" slot="content">
           <ion-card>
@@ -206,56 +206,56 @@
               <ion-grid>
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">Name</ion-label>
+                    <ion-label class="head">{{"Name" | translate}}</ion-label>
                     <ion-label> : {{data?.donor?.name}}</ion-label>
                   </ion-col>
 
                   <ion-col size="12">
-                    <ion-label class="head">Gender</ion-label>
+                    <ion-label class="head">{{"gender" | translate}}</ion-label>
                     <ion-label> : {{data?.donor?.gender}}</ion-label>
                   </ion-col>
 
                   <ion-col size="12">
-                    <ion-label class="head">Age</ion-label>
+                    <ion-label class="head">{{"age" | translate}}</ion-label>
                     <ion-label> : {{data?.donor?.age}}</ion-label>
                   </ion-col>
 
                   <ion-col size="12">
-                    <ion-label class="head">State</ion-label>
+                    <ion-label class="head">{{"State" | translate}}</ion-label>
                     <ion-label> : {{data?.donor?.state}}</ion-label>
                   </ion-col>
 
                   <ion-col size="12" *ngIf="data?.donor?.district">
-                    <ion-label class="head">District</ion-label>
+                    <ion-label class="head">{{"District" | translate}}</ion-label>
                     <ion-label> : {{data?.donor?.district}}</ion-label>
                   </ion-col>
 
                   <ion-col size="12" *ngIf="data?.donor?.tahsil">
-                    <ion-label class="head">Tehsil</ion-label>
+                    <ion-label class="head">{{"Tahsil" | translate}}</ion-label>
                     <ion-label> : {{data?.donor?.tahsil}}</ion-label>
                   </ion-col>
 
                   <ion-col size="12" *ngIf="data?.donor?.village">
-                    <ion-label class="head">Village</ion-label>
+                    <ion-label class="head">{{"Village" | translate}}</ion-label>
                     <ion-label> : {{data?.donor?.village}}</ion-label>
                   </ion-col>
 
                   <ion-col size="12">
-                    <ion-label class="head">Blood Group</ion-label>
+                    <ion-label class="head">{{"bloodGroup" | translate}}</ion-label>
                     <ion-label> : {{data?.donor?.bloodGroup}}</ion-label>
                   </ion-col>
 
                   <ion-col size="12">
-                    <ion-label class="head">Hemoglobin</ion-label>
+                    <ion-label class="head">{{"hemoglobin" | translate}}</ion-label>
                     <ion-label> : {{data?.donor?.hemoglobin}}</ion-label>
                   </ion-col>
                   <ion-col size="12">
-                    <ion-label class="head">Mobile No</ion-label>
+                    <ion-label class="head">{{"mobileNo" | translate}}</ion-label>
                     <ion-label> : {{data?.donor?.mobileNo}}</ion-label>
                   </ion-col>
 
                   <ion-col size="12">
-                    <ion-label class="head">Donation Date</ion-label>
+                    <ion-label class="head">{{"donationDate" | translate}}</ion-label>
                     <ion-label> : {{data?.donor?.donationDate}}</ion-label>
                   </ion-col>
                 </ion-row>
@@ -268,7 +268,7 @@
                     *ngIf="!data?.donor?.illness"
                     name="close"
                   ></ion-icon>
-                  <ion-label class="head donor-illness">Illness</ion-label>
+                  <ion-label class="head donor-illness">{{"illness" | translate}}</ion-label>
                 </ion-col>
               </ion-grid>
             </ion-card-content>
