--- a/App/src/app/shared/models/bloodrequest-mylist/bloodrequest-mylist.component.html
+++ b/App/src/app/shared/models/bloodrequest-mylist/bloodrequest-mylist.component.html
@@ -5,7 +5,7 @@
       defaultHref=""
       (click)="dismiss()"
     ></ion-back-button>
-    <ion-title> Active </ion-title>
+    <ion-title> {{"active" | translate}} </ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -14,7 +14,7 @@
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-file-lines"></i>
         <ion-label class="ion-padding-horizontal"
-          >Request Details</ion-label
+          >{{"requestDetails" | translate}}</ion-label
         >
       </ion-item>
       <div class="ion-padding accordion-collapsed" slot="content">
@@ -23,86 +23,86 @@
             <ion-grid >
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Name</ion-label>
+                  <ion-label class="head">{{"Name" | translate}}</ion-label>
                   <ion-label>: {{data.name}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Gender</ion-label>
+                  <ion-label class="head">{{"gender" | translate}}</ion-label>
                   <ion-label>: {{data.gender}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Age</ion-label>
+                  <ion-label class="head">{{"age" | translate}}</ion-label>
                   <ion-label>:  {{data.age}}</ion-label>
                 </ion-col>
               </ion-row>
               
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Blood Group</ion-label>
+                  <ion-label class="head">{{"bloodGroup" | translate}}</ion-label>
                   <ion-label>: {{data.bloodGroup}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Blood Require Date</ion-label>
+                  <ion-label class="head">{{"RequireDate" | translate}}</ion-label>
                   <ion-label>: {{data.bloodRequireDate}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">State</ion-label>
+                  <ion-label class="head">{{"state" | translate}}</ion-label>
                   <ion-label>: {{data.state}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row *ngIf="!!data.district">
                 <ion-col size="12">
-                  <ion-label class="head">District</ion-label>
+                  <ion-label class="head">{{"District"  | translate}}</ion-label>
                   <ion-label>: {{data.district}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row *ngIf="!!data.tahsil">
                 <ion-col size="12">
-                  <ion-label class="head">Tehsil</ion-label>
+                  <ion-label class="head">{{"Tahsil"  | translate}}</ion-label>
                   <ion-label>: {{data.tahsil}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row *ngIf="!!data.village">
                 <ion-col size="12">
-                  <ion-label class="head">Village</ion-label>
+                  <ion-label class="head">{{"Village"  | translate}}</ion-label>
                   <ion-label>: {{data.village}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Father or Husband</ion-label>
+                  <ion-label class="head">{{"Father/Husband" | translate}}</ion-label>
                   <ion-label>: {{data.fatherOrHusband}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Hemoglobin</ion-label>
+                  <ion-label class="head">{{"hemoglobin" | translate}}</ion-label>
                   <ion-label>: {{data.hemoglobin}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Illness</ion-label>
+                  <ion-label class="head">{{"illness" | translate}}</ion-label>
                   <ion-label>: {{data.illness}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Mobile Number</ion-label>
+                  <ion-label class="head">{{"mobileNo" | translate}}</ion-label>
                   <ion-label>: {{data.mobileNo}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Units</ion-label>
+                  <ion-label class="head">{{"units" | translate}}</ion-label>
                   <ion-label>: {{data.units}}</ion-label>
                 </ion-col>
               </ion-row>
@@ -114,7 +114,7 @@
     <ion-accordion value="second" *ngIf="providedBy == 'BLOOD_BANK'">
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-building-columns"></i>
-        <ion-label class="ion-padding-horizontal">Blood Bank </ion-label>
+        <ion-label class="ion-padding-horizontal">{{"bloodBankDetails" | translate}} </ion-label>
       </ion-item>
       <div class="ion-padding" slot="content">
         <ion-card>
@@ -122,25 +122,25 @@
             <ion-grid>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Blood Bank Name </ion-label>
+                  <ion-label class="head">{{"bloodBankName" | translate}}</ion-label>
                   <ion-label> : {{data?.bloodBankName}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">State </ion-label>
+                  <ion-label class="head">{{"state" | translate}} </ion-label>
                   <ion-label> :  {{data?.bankState}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">City </ion-label>
+                  <ion-label class="head">{{"city" | translate}} </ion-label>
                   <ion-label> :  {{data?.bankCity}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col class="ion-text-center" *ngIf="data.status != 'DONE' && data.status != 'RECEIVED'">
-                  <ion-button (click)="receive()">Received</ion-button>
+                  <ion-button (click)="receive()">{{"Received" | translate}}</ion-button>
                 </ion-col>
               </ion-row>
             </ion-grid>
@@ -151,7 +151,7 @@
     <ion-accordion value="third" *ngIf="providedBy == 'DONOR'">
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-droplet"></i>
-        <ion-label class="ion-padding-horizontal">Blood Donar</ion-label>
+        <ion-label class="ion-padding-horizontal">{{"bloodDonar" | translate}}</ion-label>
       </ion-item>
       <div class="ion-padding" slot="content">
         <ion-card>
@@ -159,67 +159,67 @@
             <ion-grid>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Name</ion-label>
+                  <ion-label class="head">{{"Name" | translate}}</ion-label>
                   <ion-label>: {{data?.donor?.name}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Age</ion-label>
+                  <ion-label class="head">{{"age" | translate}}</ion-label>
                   <ion-label>: {{data?.donor?.age}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Gender</ion-label>
+                  <ion-label class="head">{{"gender" | translate}}</ion-label>
                   <ion-label>: {{data?.donor?.gender}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Blood Group</ion-label>
+                  <ion-label class="head">{{"bloodGroup" | translate}}</ion-label>
                   <ion-label>: {{data?.donor?.bloodGroup}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Donation Date</ion-label>
+                  <ion-label class="head">{{"donationDate" | translate}}</ion-label>
                   <ion-label>: {{data?.donor?.donationDate}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">State</ion-label>
+                  <ion-label class="head">{{"state" | translate}}</ion-label>
                   <ion-label>: {{data?.donor?.state}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row *ngIf="data?.donor?.district">
                 <ion-col size="12">
-                  <ion-label class="head">District</ion-label>
+                  <ion-label class="head">{{"District" | translate}}</ion-label>
                   <ion-label>: {{data?.donor?.district}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row *ngIf="data?.donor?.tahsil">
                 <ion-col size="12">
-                  <ion-label class="head">Tehsil</ion-label>
+                  <ion-label class="head">{{"Tahsil"  | translate}}</ion-label>
                   <ion-label>: {{data?.donor?.tahsil}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row *ngIf="data?.donor?.village">
                 <ion-col size="12">
-                  <ion-label class="head">Village</ion-label>
+                  <ion-label class="head">{{"Village" | translate}}</ion-label>
                   <ion-label>: {{data?.donor?.village}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row *ngIf="data?.donor?.gender == 'FEMALE'">
                 <ion-col size="12">
-                  <ion-label class="head">Father/Husband</ion-label>
+                  <ion-label class="head">{{"Father/Husband"  | translate}}</ion-label>
                   <ion-label>: {{data?.donor?.fatherOrHusband}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Hemoglobin</ion-label>
+                  <ion-label class="head">{{"hemoglobin" | translate}}</ion-label>
                   <ion-label>: {{data?.donor?.hemoglobin}}</ion-label>
                 </ion-col>
               </ion-row>
@@ -233,18 +233,18 @@
                     *ngIf="!data?.donor?.illness"
                     name="close"
                   ></ion-icon>
-                  <ion-label class="head donor-illness">Illness</ion-label>
+                  <ion-label class="head donor-illness">{{"illness" | translate}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Mobile Number</ion-label>
+                  <ion-label class="head">{{"mobileNo" | translate}}</ion-label>
                   <ion-label>: {{data?.donor?.mobileNo}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col class="ion-text-center" *ngIf="data.status != 'DONE' && data.status != 'RECEIVED'">
-                  <ion-button (click)="receive()">Received</ion-button>
+                  <ion-button (click)="receive()">{{"Received" | translate}}</ion-button>
                 </ion-col>
               </ion-row>
             </ion-grid>
